.aws/cloudformation/security-groups.yml
AWSTemplateFormatVersion: '2010-09-09'

Description: Catlean Backend - Creation of all SecurityGroups

Parameters:
  VpcId:
    Description: VPC ID
    Type: AWS::EC2::VPC::Id

  Env:
    Description: The environment name deployed
    Type: String
    Default: staging

Resources:
  CatleanBackendSg:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub catlean-backend-sg-${Env}
      GroupDescription: catlean-backend-sg
      SecurityGroupIngress:
      -
        IpProtocol: tcp
        FromPort: 0
        ToPort: 65535
        SourceSecurityGroupId: !Ref CatleanBackendAlbSg
      -
        IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        CidrIp: 0.0.0.0/0
      Tags:
      - Key: Name
        Value: catlean-backend-sg
      VpcId: !Ref VpcId
  CatleanBackendAlbSg:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub catlean-backend-alb-sg-${Env}
      GroupDescription: catlean-backend-alb-sg
      SecurityGroupIngress:
      -
        IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        CidrIp: 0.0.0.0/0
      -
        IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        CidrIpv6: ::/0
      -
        IpProtocol: tcp
        FromPort: 443
        ToPort: 443
        CidrIp: 0.0.0.0/0
      -
        IpProtocol: tcp
        FromPort: 443
        ToPort: 443
        CidrIpv6: ::/0
      Tags:
      - Key: Name
        Value: catlean-backend-alb-sg
      VpcId: !Ref VpcId
  CatleanBackendDatabaseSg:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub catlean-backend-db-sg-${Env}
      GroupDescription: catlean-backend-db-sg
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 5432
          ToPort: 5432
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 5432
          ToPort: 5432
          CidrIpv6: ::/0
      VpcId: !Ref VpcId

Outputs:
  CatleanBackendSg:
    Value: !Ref CatleanBackendSg
  CatleanBackendAlbSg:
    Value: !Ref CatleanBackendAlbSg
  CatleanBackendDatabaseSg:
    Value: !Ref CatleanBackendDatabaseSg
